--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/variables.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>T.lpix photo | home</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="nav">
+        <h1>T.LPIX</h1>
+        <ul>
+          <li><a href="#">Accueil</a></li>
+          <li><a href="#">A propos</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
+      <div class="back-img">
+        <h2>T.lpix_<span>Photographie</span></h2>
+        <p>Votre photographe amateur automobiles.</p>
+        <button>CONTACT</button>
+      </div>
+    </header>
+  </body>
 </html>
