--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/variables.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>T.lpix photo | home</title>
@@ -22,8 +26,8 @@
         <h1>T.LPIX</h1>
         <ul>
           <li><a href="#">Accueil</a></li>
-          <li><a href="#">A propos</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="#who">A propos</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="">Contact</a></li>
         </ul>
       </div>
@@ -33,5 +37,26 @@
         <button>CONTACT</button>
       </div>
     </header>
+    <section class="who" id="who">
+      <h2>A propos</h2>
+      <div class="content">
+        <div class="picture-profile">
+          <img src="./img/tom.jpg" alt="photo de profile" />
+        </div>
+        <div class="description">
+          <h3>Qui suis-je ?</h3>
+          <p>
+            Je me présente, mon prénom est Thomas, photographe amateur de la
+            région toulousaine, étant tombé dans le monde de l'automobile des
+            mon plus jeune âge, je souhaite a présent partager ma passion avec
+            vous a travers mes shootings. Je reste a votre disposition pour
+            toute vos demandes.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="portfolio" id="portfolio">
+      <h2>Portfolio</h2>
+    </section>
   </body>
 </html>
