--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/2d2f1726b8.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./css/variables.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>T.lpix photo | home</title>
   </head>
   <body>
     <header>
-      <div class="nav">
+      <div class="nav sticky">
         <h1>T.LPIX</h1>
         <ul>
           <li><a href="#">Accueil</a></li>
@@ -57,6 +61,68 @@
     </section>
     <section class="portfolio" id="portfolio">
       <h2>Portfolio</h2>
+      <div class="content-portfolio">
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/bmw.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_4801.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_4842.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_4921.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_4988.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_5019.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_5128.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_5213.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_5265.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_5348.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_6142.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_6466.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_5348.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_6142.jpg" alt="" />
+        </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_6466.jpg" alt="" />
+        </div>
+      </div>
     </section>
   </body>
 </html>
