modification of the gallery

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
           <i class="fas fa-search-plus"></i>
           <img src="./img/IMG_6466.jpg" alt="" />
         </div>
+        <div class="cont-img">
+          <i class="fas fa-search-plus"></i>
+          <img src="./img/IMG_6466.jpg" alt="" />
+        </div>
       </div>
     </section>
   </body>
