--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
       </div>
       <div class="back-img">
-        <h2>T.lpix_<span>Photographie</span></h2>
+        <h2>T.lpix_<span id="anim"></span></h2>
         <p>Votre photographe amateur automobiles.</p>
         <button>CONTACT</button>
       </div>
@@ -128,5 +128,6 @@
         </div>
       </div>
     </section>
+    <script src="./js/main.js"></script>
   </body>
 </html>
